fix spacing, add notificaiton of wrong or right

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -51,7 +51,7 @@ h2 {
   line-height: 144px;
   border-radius: 50%;
   box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
-	transition: background-color 0.5s;
+	// transition: background-color 0.5s;
 	cursor: hand;
 	cursor: pointer;
 }
@@ -82,6 +82,7 @@ h2 {
 	width: 200px;
 	border-radius:18px;
 	display: inline-block;
+	margin: 0 auto;
 
 
 }
@@ -94,7 +95,7 @@ h2 {
 	top: 400px;
 	height: 250px;
 	width: 250px;
-	transition: 1.0s;
+	transition: 0.5s;
 }
 
 .donald_j_trump {
@@ -118,8 +119,8 @@ img {
 		overflow: visible;
 		height: 100px;
 		width: 100px;
-		right: 1300px;
-		top: 350px;
+		right: 950px;
+		top: 650px;
 
 }
 
@@ -128,8 +129,8 @@ img {
 		overflow: visible;
 		height: 100px;
 		width: 100px;
-		right: 1100px;
-		top: 350px;
+		right: 750px;
+		top: 650px;
 }
 
 .dj_pauly_d .myButton:hover + div#hidden.dj_pauly_d_img {
@@ -137,8 +138,8 @@ img {
 		overflow: visible;
 		height: 100px;
 		width: 100px;
-		right: 900px;
-		top: 350px;
+		right: 550px;
+		top: 650px;
 }
 
 span {
@@ -171,4 +172,20 @@ span {
 }
 
 .all_buttons {
+	text-align: center;
+	width: 100%;
+}
+
+.big_space {
+	height: 500px;
+}
+
+.answer_status	 {
+	font-family: 'Indie Flower', cursive;
+	font-size: 5em;
+	text-align: center;
+}
+
+.answer_status_box {
+	margin-top: 60px;
 }
